--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "my-sveltekit-project",
+  "name": "cloudprod-svekit",
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run build && npx gh-pages -d build"
   },
   "devDependencies": {
     "@sveltejs/kit": "latest",
