--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,9 @@ jobs:
         run: npm install
         
       - name: Build website
-        run: npm run build
+        run: |
+          npm run build
+          touch build/.nojekyll
         
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
