--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite dev",
-    "build": "cp src/app.css static/ && vite build",
+    "build": "cp src/app.css static/ && vite build && cp build/index.html build/404.html",
     "preview": "vite preview",
     "deploy": "npm run build && npx gh-pages -d build"
   },
