--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,15 +20,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
           
       - name: Install dependencies
-        run: npm install --legacy-peer-deps
+        run: npm clean-install
         
       - name: Build website
         run: |
           npm run build
           touch build/.nojekyll
-          cp build/index.html build/404.html
           
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
