--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "build": "cp src/app.css static/ && vite build && cp build/index.html build/404.html"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "latest",
-    "@sveltejs/kit": "latest",
-    "svelte": "latest",
-    "vite": "latest"
+    "@sveltejs/adapter-static": "^3.0.1",
+    "@sveltejs/kit": "^2.5.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "svelte": "^4.2.10",
+    "vite": "^5.0.12"
   },
   "dependencies": {
   }
